# Distributed-Systems-AGH

./: .gitignore  README.md
Zadanie_1/: README.MD  task
Zadanie_1/SocketLabs/: .gitignore
Zadanie_2/: README.md  task
Zadanie_2/RESTApiTask/: .env
Zadanie_2/Szot_Dominik_2/: .env  plik_tekstowy_oświadczenie  server.py
Zadanie_3/install/: pyvenv.cfg
assignment_01/: .gitignore  readme.md
assignment_01/socket-labs/: pom.xml
assignment_02/: .gitignore  readme.md
assignment_02/rest-api-task/: .env  client.sh  config.ini  requirements.txt  server.sh  task
assignment_04/: .gitignore
assignment_04/A-1/client/: server.js  (+4 more)
assignment_05/: readme.md  task
assignment_05/OrthMed-System/: pom.xml  run_administrator.sh  run_doctor.sh  run_technician.sh
backup/Zadanie_4/A-1/SmartHomeClient/: CMakeLists.txt
backup/Zadanie_4/A-1/SmartHomeClient/config/: config.client
backup/Zadanie_4/A-1/SmartHomeClient/src/: main.cpp
backup/Zadanie_4/A-1/SmartHomeClient/src/SmartHome/: SmartHome.cpp  SmartHome.h
backup/Zadanie_4/A-1/SmartHomeClient/src/enums/: DetectorInterfaceEnums.hpp  LightControlInterfaceEnums.hpp  MoveDetectorEnum.hpp  OutdoorLightInterfaceEnums.hpp  SmartInterfaceEnums.hpp  SmokeDetectorEnum.hpp
backup/Zadanie_4/A-1/SmartHomeClient/src/remote/: CommandHandler.hpp  DetectorsHandler.hpp  LightControlHandler.hpp  MoveDetectorsHandler.hpp  OutdoorLightsHandler.hpp  SmartDeviceHandler.hpp  SmokeDetectorsHandler.hpp
backup/Zadanie_4/A-1/SmartHomeClient/src/utils/: utils.hpp
laboratory_01/: README.md  readme.md
laboratory_02/LabDemo/: distributed.py
(+123 files in other folders)
